--- a/config/packages/fos_rest.yaml
+++ b/config/packages/fos_rest.yaml
@@ -2,6 +2,8 @@
 fos_rest:
     body_converter:
         enabled: true
+        validate: true
+        validation_errors_argument: validationErrors # This is the default value
 #    param_fetcher_listener:  true
 #    allowed_methods_listener:  true
 #    routing_loader: true
