- Added circleci deploy configs - Added 'media' Nginx configs

--- a/docker/ci/nginx/nginx.conf
+++ b/docker/ci/nginx/nginx.conf
@@ -6,7 +6,17 @@ server {
     access_log /var/log/nginx/application.access.log;
 
     root /application/public;
-    
+
+    # This config should allow mapping '/media/<some_path>' to '/public/uploads/<some_path>' files
+    location ^~ /media/invoice/  {
+        alias /application/public/uploads/invoice/;
+        add_header Content-disposition 'attachment';
+    }
+    location ^~ /media/image/  {
+        alias /application/public/uploads/image/;
+        try_files $uri =404;
+    }
+
     # Deny all . files
     location / {
         try_files $uri /index.php$is_args$args;
