--- a/docker/dev/nginx/nginx.conf
+++ b/docker/dev/nginx/nginx.conf
@@ -7,6 +7,16 @@ server {
 
     root /application/public;
 
+    # This config should allow mapping '/media/<some_path>' to '/public/uploads/<some_path>' files
+    location ^~ /media/invoice/  {
+        alias /application/public/uploads/invoice/;
+        add_header Content-disposition 'attachment';
+    }
+    location ^~ /media/image/  {
+        alias /application/public/uploads/image/;
+        try_files $uri =404;
+    }
+
     # Deny all . files
     location / {
         try_files $uri /index.php$is_args$args;
