--- a/docker/ci/nginx/Dockerfile
+++ b/docker/ci/nginx/Dockerfile
@@ -3,4 +3,4 @@ FROM nginx:alpine
 WORKDIR "/application"
 
 COPY . /application
-COPY /docker/ci/nginx/nginx.conf /etc/nginx/conf.d/default.conf
+COPY /docker/dev/nginx/nginx.conf /etc/nginx/conf.d/default.conf
