--- a/docker/dev/nginx/nginx.conf
+++ b/docker/dev/nginx/nginx.conf
@@ -14,7 +14,7 @@ server {
     }
     location ^~ /media/image/  {
         alias /application/public/uploads/image/;
-        try_files $uri =404;
+        try_files $uri $uri/ =404;
     }
 
     # Deny all . files
