--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "ext-json": "*",
+        "anyx/login-gate-bundle": "^1.0",
         "doctrine/doctrine-migrations-bundle": "^2.1",
         "friendsofsymfony/rest-bundle": "dev-master",
         "lexik/jwt-authentication-bundle": "^2.6",
@@ -20,6 +21,7 @@
         "symfony/options-resolver": "5.0.*",
         "symfony/security-bundle": "5.0.*",
         "symfony/serializer": "5.0.*",
+        "symfony/swiftmailer-bundle": "^3.4",
         "symfony/validator": "5.0.*",
         "symfony/yaml": "5.0.*"
     },
