--- a/config/services.yaml
+++ b/config/services.yaml
@@ -33,3 +33,11 @@ services:
         arguments:
             $targetDirectory: '%uploads_directory%/invoice'
             $xlsProcessor: '@App\Service\XlsProcessor'
+
+    App\EventListener\BruteForceAttemptListener:
+        arguments:
+            $mailer: '@mailer'
+            $mailfrom: '%env(MAILER_SENDER)%'
+            $mailto: '%env(MAILER_RECIPIENT)%'
+        tags:
+            - { name: kernel.event_listener, event: security.brute_force_attempt, method: onBruteForceAttempt }
